= HEAD

* Require loading the render plugin again if you want to change the default layout (jeremyevans)

* Pass :css_opts and :js_opts as template options (via :opts) instead of render options when rendering (jeremyevans)

* Only pass :opts hash to template class during rendering, instead of all render/view options (jeremyevans)

* Support :template_class option in the render plugin for overriding template class to use (jeremyevans)

* Automatically dup unfrozen Array/Hash opts values when subclassing (jeremyevans)

* Add named_templates plugin, for creating inline templates by name, instead of storing them in the file system (jeremyevans)

* Support :template option in for render/view to specify template to use, instead of requiring separate argument (jeremyevans)

* Add class_level_routing plugin, for a DSL similar to Sinatra (jeremyevans)

* Make RodaRequest.consume_pattern not capture pattern by default (jeremyevans)

* Add static_path_info plugin, making Roda not modify PATH_INFO or SCRIPT_NAME during routing (jeremyevans)

* Use local/instance variable lookups instead of method calls to improve performance (jeremyevans)

* Add RodaRequest#session, and have #session delegate to that (jeremyevans)

* Add delegate plugin, for easily creating methods that delegate to request or response (jeremyevans)

* Add mailer plugin, allowing use of a routing tree for email instead of web responses (jeremyevans)

= 1.1.0 (2014-11-11)

* Add assets plugin, for rendering assets on the fly, or compiling them to a single compressed file (cj, jeremyevans) (#5)

* Make InstanceMethods in plugins not include constants, as they would pollute the constant namespace (jeremyevans)

* Make response.finish add the Content-Length header, not response.write (jeremyevans)

* Add response.finish_with_body to override response body used (jeremyevans)

* Use allocate instead of new in rack app (jeremyevans)
